Fix typo in CRC post

--- a/_posts/2017-02-01-crc.md
+++ b/_posts/2017-02-01-crc.md
@@ -19,7 +19,10 @@ The technique involves using physical cards with each card representing a single
 ![CRC Card](http://agilemodeling.com/images/models/crcCardLayout.jpg)
 
 ## How to develop CRC cards
-Once the User Stories have been developed, it should be straight forward to iteratively refine this into CRC Cards. Basing on the User Cases:
+Once the User Stories have been developed, it should be straight forward to iteratively refine this into CRC Cards. 
+
+Basing on the Use Cases:
+
 1. Use the nouns to identify the classes
 2. List the actions within the class as responsibilities
 3. Link any associations between the classes as collaborators
